# FPVS-Studio

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
fpvs_studio/: __init__.py  main.py
fpvs_studio/config/: __init__.py  serialization.py
fpvs_studio/controllers/: __init__.py  experiment_controller.py  run_controller.py  scheduling.py
fpvs_studio/engine/: __init__.py  demo_real_presenter.py  dummy_presenter.py  presenter_base.py  real_presenter.py
fpvs_studio/markers/: __init__.py  base.py  null_marker.py
fpvs_studio/models/: __init__.py  condition.py  exceptions.py  experiment.py  timing.py
fpvs_studio/views/: __init__.py  experiment_editor.py  main_window.py
tests/: conftest.py  test_scheduling.py
